--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Poke Api Android Task</string>
+    <string name="app_name">Pokedex</string>
     <string name="search_pokemons">Search Pokemons</string>
     <string name="retry">Retry</string>
     <string name="tap_to_retry">There was an error\ntap to retry</string>
-    <string name="statistics">Statistics</string>
+    <string name="statistics">Base Stats</string>
 </resources>
