--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="retry">Retry</string>
     <string name="tap_to_retry">There was an error\ntap to retry</string>
     <string name="statistics">Base Stats</string>
-    <string name="disclaimer">You may experience slow loading of pokemons, this is because of the way the Pokeapi is designed. Sorry for any inconvenience caused.</string>
-    <string name="disclaimer_header">Disclaimer</string>
+    <string name="thanks">Thanks for installing\nCheck more of my work on Github</string>
+    <string name="thanks_header">Thank you!!</string>
     <string name="confirm_disclaimer">Continue</string>
 </resources>
