--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="thanks">Thanks for installing\nCheck more of my work on Github</string>
     <string name="thanks_header">Thank you!!</string>
     <string name="confirm_disclaimer">Continue</string>
+    <string name="scroll_up_indicator">Scroll up indicator</string>
 </resources>
